# hf-unit-tests

./: .gitignore  .gitmodules  README.md
esp32c6-hf-test-project/: CMakeLists.txt  README.md  build_and_flash.sh  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  validate_project.sh
esp32c6-hf-test-project/components/hf_internal_interface_wrap/: CMakeLists.txt
esp32c6-hf-test-project/main/: CMakeLists.txt  hf_gpio_config.cpp  main.cpp  test_communication.cpp  test_hardware.cpp
esp32c6-hf-test-project/main/include/: hf_gpio_config.hpp  test_communication.hpp  test_hardware.hpp
tests-internal-interface-wrap/: CMakeLists.txt  sdkconfig
tests-internal-interface-wrap/main/: CMakeLists.txt  main.cpp
